# BareDMG

./: CMakeLists.txt  CMakeSettings.json
include/: gbemu.h
src/: main.c
src/core/: CMakeLists.txt  bus.c  gbemu.c
src/core/cpu/: cpu.c
